fix -> snakeCase field names in database feat -> update route for orders, creating,updating or deleting items of some order
